Fix icon misalignment on the sidebar buttons

--- a/UEESA.Client/wwwroot-dev/css/components/overlays/_sidebars.scss
+++ b/UEESA.Client/wwwroot-dev/css/components/overlays/_sidebars.scss
@@ -111,6 +111,7 @@
                 i {
                     color: rgba($colour-white, 0.6);
                     font-size: 24px;
+                    transform: translateY(2.5px);
                 }
 
                 &:hover {
